# fn-shell

./: .gitignore  CHANGELOG.md  Main.hs  README.md  ShellEnv.ini  fn-Shell.cabal
app/: Main.hs
script-examples/: basic.fnsh
src/: Commands.hs  FileSystem.hs  ScriptInfer.hs  ScriptLexer.hs  ScriptParser.hs  ScriptSyntax.hs  ScriptTypes.hs  Shell.hs  ShellCommands.hs  ShellParserHelper.hs  ShellParsers.hs  ShellTypes.hs  ShellUtility.hs
src/Filesystem/: FST.hs
src/Language/: Infer.hs  Lexer.hs  Parser.hs  Syntax.hs  Types.hs  typesystem.md
src/Terminal/: Commands.hs  ConfigParser.hs  Shell.hs  ShellTypes.hs  Utility.hs
