cabal-version:       >=1.10
name:                fn-Shell
version:             0.1.0.0
-- license:
license-file:        LICENSE
author:		   Christoffer Lind Andersen
-- maintainer:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs:      src
  exposed-modules:     Shell, ShellTypes, ShellCommands, ShellParsers, ShellUtility,
                       FileSystem,
                       ScriptSyntax, ScriptLexer, ScriptParser
                       --
  build-depends:       base,
                       text,
                       bytestring,
                       binary,
                       mtl,
                       cond,
                       containers, 
                       directory,
                       process,
                       filepath, 
                       repline,
                       parsec
                       
  default-language:    Haskell2010

executable fn-Shell
  main-is:             Main.hs
  build-depends:       base, directory, filepath, cond, fn-Shell
  hs-source-dirs:      app
  default-language:    Haskell2010